# kontiki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration.md  features.md  kontiki-config.example.yaml
examples/: common.yaml
examples/events/broadcast/: broadcast_example.py  service.py
examples/events/serialization/: common.py  serialization_example.py  service.py
examples/events/session/: service.py  session_example.py
examples/events/simple/: event_service.yaml  service.py
examples/heartbeat/: heartbeat_example.py  heartbeat_example.yaml  service.py
examples/http/: __init__.py
examples/http/simple/: __init__.py  http_example.yaml  service.py
examples/registry/: client.py  config.yaml  service.py
examples/rpc/: rpc_example.py  rpc_service.yaml  service.py
examples/task/: service.py
kontiki/: container.py  delegate.py  utils.py
kontiki/configuration/: __init__.py  configuration.py  merge.py  parameter.py
kontiki/messaging/: __init__.py  common.py  rpc.py  serialization.py
kontiki/messaging/consumer/: core.py  event.py  rpc.py
kontiki/messaging/publisher/: messenger.py  rpc.py  session.py
kontiki/registry/: __init__.py  common.py  events.py
kontiki/registry/client/: heartbeat_publisher.py  proxy.py  registry_client.py
kontiki/registry/server/: core.py  main.py  service.py
kontiki/runner/: __main__.py  cli.py  runner.py
kontiki/task/: task.py
kontiki/testing/: __init__.py  manager.py  mock.py  runner.py
kontiki/testing/delegates/: event_manager.py  http_manager.py  (+1 more)
kontiki/web/: __init__.py  utils.py  web.py
tests/integration/: config.yaml  config_multi_1.yaml  config_multi_2.yaml  config_registry_server.yaml  config_registry_test_service.yaml  environment.py  http.feature  on_event.feature  registry.feature  registry_live.feature  registry_uncaught_exceptions.feature  rpc.feature  service.py  services.py  task.feature
(+23 files in other folders)
